Fix navbar overflow

--- a/css/custom.css
+++ b/css/custom.css
@@ -3,6 +3,7 @@
 .navbar,
 .navbar-spacer {
   display: block;
+  overflow: auto;
   width: 100%;
   height: 6.5rem;
   background: #fff;
